--- a/templates/web_config.yml.j2
+++ b/templates/web_config.yml.j2
@@ -1,6 +1,6 @@
 ---    # -*-YAML-*-
 tls_server_config:
-  cert_file: "/server.crt"
-  key_file: "/server.key"
-  client_ca_file: "/ca.crt"
+  cert_file: "{{cert}}"
+  key_file: "{{key}}"
+  client_ca_file: "{{ca}}"
   client_auth_type: "RequireAndVerifyClientCert"
