updates and such and first cut alerts

--- a/templates/node_exporter.service.j2
+++ b/templates/node_exporter.service.j2
@@ -8,6 +8,7 @@ After=network-online.target
 Type=simple
 User=root
 Group={{promnode_group}}
+ExecStartPre=mkdir -p {{promnode_text_path}}
 ExecStart={{promnode_bin}} \
 {% for collector in promnode_disabled %}
 {{'    '}}--no-collector.{{collector}} \
