--- a/templates/prometheus.yml.j2
+++ b/templates/prometheus.yml.j2
@@ -1,4 +1,4 @@
---- # {{ansible_managed}}
+---  # -*-YAML-*- {{ansible_managed}}
 global:
   scrape_interval: "{{prometheus_scrape_interval}}"
 
@@ -6,3 +6,19 @@ scrape_configs:
 {% for scrape in prometheus_scrapes %}
 {{'  '}}- {{scrape | to_nice_yaml(indent=4,sort_keys=False) | indent(4, False) }}
 {% endfor %}
+
+rule_files:
+{{'  '}}- "/etc/prometheus/*_rule.yml"
+
+{% if 'alerts' in promfriends_contexts|default([]) -%}
+alerting:
+  alertmanagers:
+    - scheme: "https"
+      tls_config:
+        ca_file: "/ca.crt"
+        cert_file: "/server.crt"
+        key_file: "/server.key"
+      static_configs:
+        - targets:
+            - "{{inventory_hostname}}"
+{% endif %}
